--- a/readme
+++ b/readme
@@ -1,2 +1,3 @@
  this is learning on git basic command and basic commits and understandting
  version controle of git
+I am able to see the changes in git repo
