my second commit

--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
  this is learning on git basic command and basic commits and understandting
  version controle of git
 I am able to see the changes in git repo
+I am able to pull the latest changes in my local repository
