--- a/readme
+++ b/readme
@@ -2,3 +2,4 @@
  version controle of git
 I am able to see the changes in git repo
 I am able to pull the latest changes in my local repository
+I am able to see both changes in git hub repo
