--- a/readme
+++ b/readme
@@ -3,3 +3,4 @@
 I am able to see the changes in git repo
 I am able to pull the latest changes in my local repository
 I am able to see both changes in git hub repo
+this is upading to readme file for git changes to push into repository
