I am able to see both the changes in local and remote

--- a/readme
+++ b/readme
@@ -4,3 +4,4 @@ I am able to see the changes in git repo
 I am able to pull the latest changes in my local repository
 I am able to see both changes in git hub repo
 this is upading to readme file for git changes to push into repository
+I am able to see the updates local and remote repo's both the changes
