--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
+ 
  this is learning on git basic command and basic commits and understandting
  version controle of git
 I am able to see the changes in git repo
@@ -5,3 +6,4 @@ I am able to pull the latest changes in my local repository
 I am able to see both changes in git hub repo
 this is upading to readme file for git changes to push into repository
 I am able to see the updates local and remote repo's both the changes
+we are doing hand on in git commands
