i can see the changes in remote repo which pushed from local repo

--- a/readme
+++ b/readme
@@ -7,3 +7,4 @@ I am able to see both changes in git hub repo
 this is upading to readme file for git changes to push into repository
 I am able to see the updates local and remote repo's both the changes
 we are doing hand on in git commands
+I can see the change which is pushed from local to remote and it is update in the remote branch
